@@ -27,6 +27,8 @@
 
     <properties>
         <antlr4.version>4.9.3</antlr4.version>
+        <!-- it's required by the 'org.neo4j' libraries  -->
+        <argLine> --add-opens java.base/java.lang=ALL-UNNAMED --add-exports java.base/sun.nio.ch=ALL-UNNAMED </argLine>
     </properties>
 
     <dependencies>
@@ -84,7 +86,6 @@
                 <version>${antlr4.version}</version>
                 <configuration>
                     <sourceDirectory>../../antlr4</sourceDirectory>
-                    <outputDirectory>target/generated-sources/generated-sources</outputDirectory>
                 </configuration>
                 <executions>
                     <execution>
